--- a/app.css
+++ b/app.css
@@ -1,13 +1,6 @@
 
 @import url(
-  https://fonts.googleapis.com/css?family=Source+Code+Pro:200,
-  300,
-  400,
-  500,
-  600,
-  700,
-  900
-);
+  https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,800,900);
 /*What we're selecting*/
 h1 {
   font-weight: 200;
