--- a/app.css
+++ b/app.css
@@ -30,7 +30,7 @@ img {
 }
 
 button {
-  margin: 30px atuo 0;
+  margin: 30px auto 0;
   padding: 20px 25px;
   background-color: #f69680;
   color: #2e1263;
